# Brickware-Engine

./: Brickware-Engine.sln  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
BrickwareCore/: CMakeLists.txt  Makefile  cmake_install.cmake
BrickwareCore/include/: Bounds.h  BrickwareCoreDLL.h  Camera.h  Collider.h  Game.h  Input.h  Light.h  Material.h  Mesh.h  Shader.h  Texture.h  Transform.h  Utils.h
BrickwareCore/src/: Game.cpp  Light.cpp  MaterialD3D.cpp  TextureGL.cpp  Utils.cpp
BrickwareGraphics/lib/: BrickwareUtils.lib
BrickwareMath/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
BrickwareMath/BrickwareMath/: Makefile  cmake_install.cmake
BrickwareMath/include/: Matrix4.h  Vector2.h  Vector3.h
BrickwareMath/src/: Matrix3.cpp
BrickwareTest/: BrickwareTest  CMakeLists.txt  Makefile  PixelShader.cso  VertexShader.cso  cmake_install.cmake
BrickwareTest/Shaders/: PixelShader.glsl  PrimitivePixel.glsl  PrimitiveVertex.glsl  VertexShader.glsl
BrickwareTest/include/: Ball.h  Board.h  Dimple.h
BrickwareTest/lib/: BrickwareCore.lib  BrickwareGraphics.lib  BrickwareMath.lib
BrickwareTest/src/: Dimple.cpp
Checkers/: Checkers.vcxproj
Debug/: Brickware-Engine.ilk
